@@ -175,11 +175,14 @@ class ZMAttributeValue extends ZMModel {
      * @return double The price.
      */
     public function getPrice($tax=true) { 
-        //TODO: cache value
         $price = $this->price_;
         if ($this->isDiscounted_) {
+            //TODO: cache value
             $price = $this->getFinalPriceForQty(1);
-            $price = _zm_get_discount_calc($this->attribute_->getProductId(), true, $price);
+            if (0 != $price) {
+                // no need to discount free attributes
+                $price = _zm_calc_discount($this->attribute_->getProductId(), $price);
+            }
         }
 
         return $tax ? $this->taxRate_->addTax($price) : $price;
@@ -214,9 +217,9 @@ class ZMAttributeValue extends ZMModel {
      * @return double The attributes one time price.
      */
     public function getOneTimePrice($tax=true) { 
-        //TODO: cache
         $price = $this->oneTimePrice_;
         if (0 != $price || $this->isPriceFactorOneTime_) {
+            //TODO: cache
             $price = $this->getFinalOneTimePriceForQty(1);
         }
 
@@ -424,38 +427,47 @@ class ZMAttributeValue extends ZMModel {
 }
 
 
-  // TODO: work in progress
-  function _zm_get_discount_calc($product_id, $attributes_id = false, $attributes_amount = false, $check_qty= false) {
-    // no charge
-    if ($attributes_id > 0 && 0 == $attributes_amount) {
-        return 0;
-    }
-
-    $product = ZMProducts::instance()->getProductForId($product_id);
+// TODO: work in progress
+// productId: the context (either we calculate a product discount or attribute value on a given product)
+// attributeId: boolean: is use attributes_amoubnt or not to calc rather than products discountAmount
+// attributes_amount: attribute price if attribute calc.
+// qty: check qty: false or integer qty; used by cart to calc quantity discounts on cart contents
+function _zm_get_discount_calc($productId, $attributeId=false, $attributes_amount=false, $qty=false) {
+    $product = ZMProducts::instance()->getProductForId($productId);
     $offers = $product->getOffers();
 
-    $new_products_price = $offers->getBasePrice(false);
-    $new_special_price = $offers->getSpecialPrice(false);
-    $new_sale_price = $offers->getSalePrice(false);
-
-    $typeInfo = ZMSalemaker::instance()->getSaleDiscountTypeInfo($product_id);
-    //$discount_type_id = _zm_get_products_sale_discount_type($product_id);
-    $discount_type_id = $typeInfo['type'];
-
-    if ($new_products_price != 0) {
-      $special_price_discount = ($new_special_price != 0 ? ($new_special_price/$new_products_price) : 1);
-    } else {
-      $special_price_discount = '';
+/*********** special qty discount cases for cart content but do not need salemaker info */
+    $isQtyDiscount = 0 < count($offers->getQuantityDiscounts(false));
+    if ($isQtyDiscount && 0 < $qty  and !$attributeId) {
+        // discount quanties exist and this is not an attribute
+        $check_discount_qty_price = zen_get_products_discount_price_qty($productId, $qty, $attributes_amount);
+        return $check_discount_qty_price;
     }
-    //$sale_maker_discount = _zm_get_products_sale_discount_type($product_id, '', 'amount');
-    $sale_maker_discount = $typeInfo['amount'];
+
+    if ($isQtyDiscount && 0 < $qty  and $product->isPricedByAttributes()) {
+        // discount quanties exist and this is not an attribute
+        $check_discount_qty_price = zen_get_products_discount_price_qty($productId, $qty, $attributes_amount);
+        return $check_discount_qty_price;
+    }
+/*********** end */
+
+    $basePrice = $offers->getBasePrice(false);
+    $specialPrice = $offers->getSpecialPrice(false);
+
+    $typeInfo = ZMSalemaker::instance()->getSaleDiscountTypeInfo($productId);
+    $discountTypeId = $typeInfo['type'];
+
+    if (0 != $basePrice) {
+        $special_price_discount = (0 != $specialPrice ? ($specialPrice/$basePrice) : 1);
+    } else {
+        $special_price_discount = '';
+    }
+    $discountAmount = $typeInfo['amount'];
 
     // percentage adjustment of discount
-    if (($discount_type_id == 120 or $discount_type_id == 1209) or ($discount_type_id == 110 or $discount_type_id == 1109)) {
-      $sale_maker_discount = ($sale_maker_discount != 0 ? (100 - $sale_maker_discount)/100 : 1);
+    if (($discountTypeId == 120 or $discountTypeId == 1209) or ($discountTypeId == 110 or $discountTypeId == 1109)) {
+        $discountAmount = (0 != $discountAmount ? (100 - $discountAmount)/100 : 1);
     }
-
-   $qty = $check_qty;
 
 /*
 
@@ -488,35 +500,12 @@ If a special exist * 10+9
 
 // fix here
 // BOF: percentage discounts apply to price
-    $isQtyDiscount = 0 < count($offers->getQuantityDiscounts(false));
-    //$isQtyDiscount = zen_get_discount_qty($product_id, $qty);
     switch (true) {
-      //case (zen_get_discount_qty($product_id, $qty) and !$attributes_id):
-      case ($isQtyDiscount && 0 < $check_qty and !$attributes_id):
-        // discount quanties exist and this is not an attribute
-        // $this->contents[$products_id]['qty']
-        $check_discount_qty_price = zen_get_products_discount_price_qty($product_id, $qty, $attributes_amount);
-//echo 'How much 1 ' . $qty . ' : ' . $attributes_amount . ' vs ' . $check_discount_qty_price . '<br />';
-//echo 'zen_get_discount_calc: qty1: '.$attributes_id.": ".$check_discount_qty_price."<BR>";
-        return $check_discount_qty_price;
-        break;
 
-      //case (zen_get_discount_qty($product_id, $qty) and $product->isPricedByAttributes()):
-      case ($isQtyDiscount && 0 < $check_qty and $product->isPricedByAttributes()):
-        // discount quanties exist and this is not an attribute
-        // $this->contents[$products_id]['qty']
-        $check_discount_qty_price = zen_get_products_discount_price_qty($product_id, $qty, $attributes_amount);
-//echo 'How much 2 ' . $qty . ' : ' . $attributes_amount . ' vs ' . $check_discount_qty_price . '<br />';
-
-//echo 'zen_get_discount_calc: qty2: '.$attributes_id.": ".$check_discount_qty_price."<BR>";
-        return $check_discount_qty_price;
-        break;
-
-      case ($discount_type_id == 5):
+      case ($discountTypeId == 5):
         // No Sale and No Special
-//        $sale_maker_discount = 1;
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
@@ -526,247 +515,375 @@ If a special exist * 10+9
               $calc = $attributes_amount;
             }
 
-            $sale_maker_discount = $calc;
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
-//echo 'How much 3 - ' . $qty . ' : ' . $product_id . ' : ' . $qty . ' x ' .  $attributes_amount . ' vs ' . $check_discount_qty_price . ' - ' . $sale_maker_discount . '<br />';
         break;
-      case ($discount_type_id == 59):
+      case ($discountTypeId == 59):
         // No Sale and Special
-//        $sale_maker_discount = $special_price_discount;
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-            $sale_maker_discount = $calc;
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: percentage discount apply to price
 
 // BOF: percentage discounts apply to Sale
-      case ($discount_type_id == 120):
+      case ($discountTypeId == 120):
         // percentage discount Sale and Special without a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
-            $calc = ($attributes_amount * $sale_maker_discount);
-            $sale_maker_discount = $calc;
+            $calc = ($attributes_amount * $discountAmount);
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
-      case ($discount_type_id == 1209):
+      case ($discountTypeId == 1209):
         // percentage discount on Sale and Special with a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-            $calc2 = $calc - ($calc * $sale_maker_discount);
-            $sale_maker_discount = $calc - $calc2;
+            $calc2 = $calc - ($calc * $discountAmount);
+            $discountAmount = $calc - $calc2;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: percentage discounts apply to Sale
 
 // BOF: percentage discounts skip specials
-      case ($discount_type_id == 110):
+      case ($discountTypeId == 110):
         // percentage discount Sale and Special without a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
-            $calc = ($attributes_amount * $sale_maker_discount);
-            $sale_maker_discount = $calc;
+            $calc = ($attributes_amount * $discountAmount);
+            $discountAmount = $calc;
           } else {
-//            $sale_maker_discount = $sale_maker_discount;
             if ($attributes_amount != 0) {
-//            $calc = ($attributes_amount * $special_price_discount);
-//            $calc2 = $calc - ($calc * $sale_maker_discount);
-//            $sale_maker_discount = $calc - $calc2;
-              $calc = $attributes_amount - ($attributes_amount * $sale_maker_discount);
-              $sale_maker_discount = $calc;
+              $calc = $attributes_amount - ($attributes_amount * $discountAmount);
+              $discountAmount = $calc;
             } else {
-              $sale_maker_discount = $sale_maker_discount;
+              $discountAmount = $discountAmount;
             }
           }
         }
         break;
-      case ($discount_type_id == 1109):
+      case ($discountTypeId == 1109):
         // percentage discount on Sale and Special with a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-//            $calc2 = $calc - ($calc * $sale_maker_discount);
-//            $sale_maker_discount = $calc - $calc2;
-            $sale_maker_discount = $calc;
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: percentage discounts skip specials
 
 // BOF: flat amount discounts
-      case ($discount_type_id == 20):
+      case ($discountTypeId == 20):
         // flat amount discount Sale and Special without a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
-            $calc = ($attributes_amount - $sale_maker_discount);
-            $sale_maker_discount = $calc;
+            $calc = ($attributes_amount - $discountAmount);
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
-      case ($discount_type_id == 209):
+      case ($discountTypeId == 209):
         // flat amount discount on Sale and Special with a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-            $calc2 = ($calc - $sale_maker_discount);
-            $sale_maker_discount = $calc2;
+            $calc2 = ($calc - $discountAmount);
+            $discountAmount = $calc2;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: flat amount discounts
 
 // BOF: flat amount discounts Skip Special
-      case ($discount_type_id == 10):
+      case ($discountTypeId == 10):
         // flat amount discount Sale and Special without a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
-            $calc = ($attributes_amount - $sale_maker_discount);
-            $sale_maker_discount = $calc;
+            $calc = ($attributes_amount - $discountAmount);
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
-      case ($discount_type_id == 109):
+      case ($discountTypeId == 109):
         // flat amount discount on Sale and Special with a special
-        if (!$attributes_id) {
-          $sale_maker_discount = 1;
+        if (!$attributeId) {
+          $discountAmount = 1;
         } else {
           // compute attribute amount based on Special
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-            $sale_maker_discount = $calc;
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: flat amount discounts Skip Special
 
 // BOF: New Price amount discounts
-      case ($discount_type_id == 220):
+      case ($discountTypeId == 220):
         // New Price amount discount Sale and Special without a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-            $sale_maker_discount = $calc;
-//echo '<br />attr ' . $attributes_amount . ' spec ' . $special_price_discount . ' Calc ' . $calc . 'Calc2 ' . $calc2 . '<br />';
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
-      case ($discount_type_id == 2209):
+      case ($discountTypeId == 2209):
         // New Price amount discount on Sale and Special with a special
-        if (!$attributes_id) {
-//          $sale_maker_discount = $sale_maker_discount;
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-//echo '<br />attr ' . $attributes_amount . ' spec ' . $special_price_discount . ' Calc ' . $calc . 'Calc2 ' . $calc2 . '<br />';
-            $sale_maker_discount = $calc;
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: New Price amount discounts
 
 // BOF: New Price amount discounts - Skip Special
-      case ($discount_type_id == 210):
+      case ($discountTypeId == 210):
         // New Price amount discount Sale and Special without a special
-        if (!$attributes_id) {
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-            $sale_maker_discount = $calc;
-//echo '<br />attr ' . $attributes_amount . ' spec ' . $special_price_discount . ' Calc ' . $calc . 'Calc2 ' . $calc2 . '<br />';
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
-      case ($discount_type_id == 2109):
+      case ($discountTypeId == 2109):
         // New Price amount discount on Sale and Special with a special
-        if (!$attributes_id) {
-//          $sale_maker_discount = $sale_maker_discount;
-          $sale_maker_discount = $sale_maker_discount;
+        if (!$attributeId) {
+          $discountAmount = $discountAmount;
         } else {
           // compute attribute amount
           if ($attributes_amount != 0) {
             $calc = ($attributes_amount * $special_price_discount);
-//echo '<br />attr ' . $attributes_amount . ' spec ' . $special_price_discount . ' Calc ' . $calc . 'Calc2 ' . $calc2 . '<br />';
-            $sale_maker_discount = $calc;
+            $discountAmount = $calc;
           } else {
-            $sale_maker_discount = $sale_maker_discount;
+            $discountAmount = $discountAmount;
           }
         }
         break;
 // EOF: New Price amount discounts - Skip Special
 
-      case ($discount_type_id == 0 or $discount_type_id == 9):
+      case ($discountTypeId == 0 or $discountTypeId == 9):
       // flat discount
-//echo 'zen_get_discount_calc: sm1: '.$attributes_id.": ".$sale_maker_discount."<BR>";
-        return $sale_maker_discount;
+        return $discountAmount;
         break;
       default:
-        $sale_maker_discount = 7000;
+        // what is this?????
+        $discountAmount = 7000;
         break;
     }
 
-//echo 'zen_get_discount_calc: sm2: '.$attributes_id.": ".$sale_maker_discount."<BR>";
-    return $sale_maker_discount;
+    return $discountAmount;
   }
+
+
+/**
+ * Calculate discount for either product or any given base amount (for example to calculate discounts on
+ * attributes).
+ *
+ * @param int productId The product i.
+ * @param float amount Optional amount; default is <code>null</code> to calculate the discount 
+ *  of the product price.
+ * @return float The discounted amount.
+ * @todo move to ZMOffers
+ */
+function _zm_calc_discount($productId, $amount=null) {
+    $product = ZMProducts::instance()->getProductForId($productId);
+    $offers = $product->getOffers();
+
+    $basePrice = $offers->getBasePrice(false);
+    $specialPrice = $offers->getSpecialPrice(false);
+
+    /*==================
+    0 = flat amount off base price with a special
+    1 = Percentage off base price with a special
+    2 = New Price with a special
+
+    5 = No Sale or Skip Products with Special_zm_calc_discount
+
+    special options + option * 10
+    0 = Ignore special and apply to Price
+    1 = Skip Products with Specials switch to 5
+    2 = Apply to Special Price
+
+    If a special exist * 10+9
+
+    0*100 + 0*10 = flat apply to price = 0 or 9
+    0*100 + 1*10 = flat skip Specials = 5 or 59
+    0*100 + 2*10 = flat apply to special = 20 or 209
+
+    1*100 + 0*10 = Percentage apply to price = 100 or 1009
+    1*100 + 1*10 = Percentage skip Specials = 110 or 1109 / 5 or 59
+    1*100 + 2*10 = Percentage apply to special = 120 or 1209
+
+    2*100 + 0*10 = New Price apply to price = 200 or 2009
+    2*100 + 1*10 = New Price skip Specials = 210 or 2109 / 5 or 59
+    2*100 + 2*10 = New Price apply to Special = 220 or 2209
+    ====================*/
+
+    $typeInfo = ZMSalemaker::instance()->getSaleDiscountTypeInfo($productId);
+    $discountTypeId = $typeInfo['type'];
+
+    if (0 != $basePrice) {
+        $special_price_discount = (0 != $specialPrice ? ($specialPrice/$basePrice) : 1);
+    } else {
+        $special_price_discount = '';
+    }
+    $discountAmount = $typeInfo['amount'];
+
+    if ($discountTypeId == 120 || $discountTypeId == 1209 || $discountTypeId == 110 || $discountTypeId == 1109) {
+        // percentage adjustment of discount
+        $discountAmount = (0 != $discountAmount ? (100 - $discountAmount)/100 : 1);
+    }
+
+    if (null == $amount && 109 == $discountTypeId) {
+        // flat amount discount on Sale and Special with a special
+        $discountAmount = 1;
+    }
+
+    if (null !== $amount) {
+        switch ($discountTypeId) {
+        case 5:
+            // No Sale and No Special
+            if (0 != $special_price_discount) {
+                $discountAmount = ($amount * $special_price_discount);
+            } else {
+                $discountAmount = $amount;
+            }
+            break;
+        case 59:
+            // No Sale and Special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 120:
+            // percentage discount Sale and Special without a special
+            $discountAmount = ($amount * $discountAmount);
+            break;
+        case 1209:
+            // percentage discount on Sale and Special with a special
+            $calc = ($amount * $special_price_discount);
+            $calc2 = $calc - ($calc * $discountAmount);
+            $discountAmount = $calc - $calc2;
+            break;
+        case 110:
+            // percentage discount Sale and Special without a special
+            $discountAmount = ($amount * $discountAmount);
+            break;
+        case 1109:
+            // percentage discount on Sale and Special with a special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 20:
+            // flat amount discount Sale and Special without a special
+            $discountAmount = ($amount - $discountAmount);
+            break;
+        case 209:
+            // flat amount discount on Sale and Special with a special
+            $calc = ($amount * $special_price_discount);
+            $calc2 = ($calc - $discountAmount);
+            $discountAmount = $calc2;
+            break;
+        case 10:
+            // flat amount discount Sale and Special without a special
+            $discountAmount = ($amount - $discountAmount);
+            break;
+        case 109:
+            // flat amount discount on Sale and Special with a special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 220:
+            // New Price amount discount Sale and Special without a special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 2209:
+            // New Price amount discount on Sale and Special with a special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 210:
+            // New Price amount discount Sale and Special without a special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 2109:
+            // New Price amount discount on Sale and Special with a special
+            $discountAmount = ($amount * $special_price_discount);
+            break;
+        case 0:
+        case 9:
+            // flat discount
+            break;
+        default:
+            throw ZMLoader::make('ZMException', 'wtf!');
+        }
+    }
+
+    return $discountAmount;
+}
 
 ?>
